--- a/jvm/src/main/resources/application.conf
+++ b/jvm/src/main/resources/application.conf
@@ -5,5 +5,10 @@ http {
   port = ${?PORT}
 }
 
+mongo {
+  uri = "mongodb://root:secret@localhost:27017/admin"
+  uri = ${?MONGO_URL_FULL_STACK_ZIO}
+}
+
 assets = ${PWD}
 assets = ${?assets}
