--- a/jvm/src/main/resources/application.conf
+++ b/jvm/src/main/resources/application.conf
@@ -10,5 +10,10 @@ mongo {
   uri = ${?MONGO_URL_FULL_STACK_ZIO}
 }
 
+postgres {
+  url = "postgres://root:secret@localhost:5432/fullstackzio"
+  url = ${?DATABASE_URL_FULL_STACK_ZIO}
+}
+
 assets = ${PWD}
 assets = ${?assets}
