--- a/jvm/src/main/resources/application.conf
+++ b/jvm/src/main/resources/application.conf
@@ -11,7 +11,8 @@ mongo {
 }
 
 postgres {
-  url = "postgres://root:secret@localhost:5432/fullstackzio"
+  driver = "org.postgresql.Driver"
+  url = "jdbc:postgresql://localhost:5432/fullstackzio?user=root&password=secret"
   url = ${?DATABASE_URL_FULL_STACK_ZIO}
 }
 
