added scoreboardService tests

--- a/jvm/src/main/resources/application.conf
+++ b/jvm/src/main/resources/application.conf
@@ -10,7 +10,7 @@ mongo {
   uri = ${?MONGO_URL_FULL_STACK_ZIO}
 }
 
-postgres {
+sqldb {
   driver = "org.postgresql.Driver"
   url = "jdbc:postgresql://localhost:5432/fullstackzio?user=root&password=secret"
   url = ${?DATABASE_URL_FULL_STACK_ZIO}
