--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,5 +39,6 @@ jobs:
           key: v1-dependencies--{{ checksum "build.sbt" }}
 
       # run tests!
-      - run: cat /dev/null | sbt test:test
+      - run: cat /dev/null | sbt appJS/test
+      - run: cat /dev/null | sbt appJVM/test
 
