added authEndpoints, authService and userRepository

--- a/jvm/src/main/resources/application.conf
+++ b/jvm/src/main/resources/application.conf
@@ -16,5 +16,10 @@ sqldb {
   url = ${?DATABASE_URL_FULL_STACK_ZIO}
 }
 
+encryption {
+  salt = "token-secret"
+  bcrypt-log-rounds = 10
+}
+
 assets = ${PWD}
 assets = ${?assets}
